Fixed issue for off campus users
Authentication bar was pushing the banner too low such that the filter
options could not be seen. Padding and height have been adjusted to fix
this in the header.

--- a/src/summon2mods.scss
+++ b/src/summon2mods.scss
@@ -15,11 +15,7 @@
     width: 320px;
   }
   .customHeader {
-    padding-top: 20px;
-    height: 70px;
-  }
-  #main {
-    padding-top: 70px !important;
+    padding-top: 24px;
   }
 }
 
